--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "js-cookie": "^3.0.1",
-    "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.0.5",
