--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.1.2",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "js-cookie": "^3.0.1",
     "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.8.0",
@@ -19,6 +20,7 @@
     "react-router": "^6.4.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
