--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-react-pdf": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,7 @@
     "dayjs": "^1.11.7",
     "js-cookie": "^3.0.1",
     "react-bootstrap": "^2.6.0",
+    "react-countdown": "^2.3.5",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
@@ -23,6 +25,7 @@
     "react-router": "^6.4.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.11",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
