--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-drawing": "^1.17.3",
     "@progress/kendo-react-pdf": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,7 +20,6 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-helmet-async": "^1.3.0",
-
     "react-icons": "^4.7.1",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.0.5",
