--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@progress/kendo-drawing": "^1.17.3",
+    "@progress/kendo-licensing": "^1.3.0",
     "@progress/kendo-react-pdf": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
